# Kinect-Fusion

./: .gitignore  CMakeLists.txt  FreeImageHelper.h  ICPOptimizer.h  ImplicitSurface.hpp  KinectOptimizer.h  ModelReconstructor.cpp  ModelReconstructor.hpp  PointCloud.h  Pose.cpp  Pose.hpp  ProcrustesAligner.h  README.md  Raytracer.cpp  Raytracer.hpp  TSDF_fuser.cpp  TSDF_fuser.h  Vertex.cpp  Vertex.hpp  VirtualSensor.h  VoxelGrid.cpp  VoxelGrid.h  VoxelGrid.hpp  libeigen3-dev_3.3.2-1_all.deb  main.cpp  old_main.cpp  plotExtrinsic.m  plotFiles.m~  plotTSDF.m  plotTSDF.m~  scatterFiles.m  surfaceFiles.m
